@@ -46,8 +46,8 @@ dialog{
   id = "_cannot_open_without_big_key",
   text = [[
 Tu ne peux sûrement pas ouvrir
-cette porte avec les petites clés
-que tu as !
+cette serrure avec les petites
+clés que tu as !
 Essaie d'en trouver une plus
 grande.
 ]],
@@ -1872,50 +1872,6 @@ dialog{
   text = [[
 Tu es doué vraiment! Au plaisir
 de te revoir!
-]],
-}
-
-dialog{
-  id = "codes.1",
-  text = [[
-Le mot demandé est :
-Page 5, Ligne 4, Mot 3
-]],
-}
-
-dialog{
-  id = "codes.2",
-  text = [[
-Le mot demandé est :
-Page 8, Ligne 10, Mot 5
-]],
-}
-
-dialog{
-  id = "codes.3",
-  text = [[
-Le mot demandé est :
-Page 2, Ligne 7, Mot 10
-]],
-}
-
-dialog{
-  id = "codes.4",
-  text = [[
-Le mot demandé est :
-Page 8, Ligne 6, Mot 9
-]],
-}
-
-dialog{
-  id = "codes.question",
-  text = [[
-Ceci est une protection
-anti-copie. Merci de 
-consulter votre manuel.
-Appuyez sur les 
-interrupteurs correspondant
-au mot demandé.
 ]],
 }
 
