@@ -241,6 +241,9 @@ text{ key = "options.video_resolution.300_240", value = "300x240" }
 text{ key = "options.video_resolution.320_180", value = "320x180" }
 text{ key = "options.video_resolution.320_240", value = "320x240" }
 text{ key = "quest_status.caption.pieces_of_heart", value = "Fragments de Coeur" }
+text{ key = "quest_status.log.new_quest", value = "Nouvelle quête !" }
+text{ key = "quest_status.log.quay", value = "pêcheur" }
+text{ key = "quest_status.log.quest_completed", value = "Quête terminée" }
 text{ key = "quest_status.title", value = "Statut Quête" }
 text{ key = "save_dialog.continue_question_0", value = "Voulez-vous continuer" }
 text{ key = "save_dialog.continue_question_1", value = "la partie ?" }
