@@ -1,0 +1,24 @@
+animation{
+  name = "fairy",
+  src_image = "entities/fairy.png",
+  directions = {
+    { x = 0, y = 0, frame_width = 16, frame_height = 16, origin_x = 8, origin_y = 13 },
+  },
+}
+animation{
+  name = "powder",
+  src_image = "entities/fairy.png",
+  frame_delay = 100,
+  frame_to_loop_on = 0,
+  directions = {
+    { x = 32, y = 0, frame_width = 32, frame_height = 32, origin_x = 16, origin_y = 29, num_frames = 8, num_columns = 4 },
+  },
+}
+animation{
+  name = "wand",
+  src_image = "entities/fairy.png",
+  frame_delay = 200,
+  directions = {
+    { x = 0, y = 0, frame_width = 16, frame_height = 16, origin_x = 8, origin_y = 13, num_frames = 6, num_columns = 2 },
+  },
+}
