@@ -1,0 +1,42 @@
+animation{
+  name = "closed",
+  src_image = "menus/parchment/parchment_grey.png",
+  directions = {
+    { x = 0, y = 0, frame_width = 160, frame_height = 32, origin_x = 0, origin_y = 0 },
+    { x = 0, y = 0, frame_width = 160, frame_height = 32, origin_x = 0, origin_y = 0 },
+    { x = 0, y = 0, frame_width = 160, frame_height = 32, origin_x = 0, origin_y = 0 },
+    { x = 0, y = 0, frame_width = 160, frame_height = 32, origin_x = 0, origin_y = 0 },
+  },
+}
+animation{
+  name = "closing",
+  src_image = "menus/parchment/parchment_grey.png",
+  frame_delay = 25,
+  directions = {
+    { x = 0, y = 288, frame_width = 160, frame_height = 32, origin_x = 0, origin_y = 0, num_frames = 10, num_columns = 1 },
+    { x = 0, y = 288, frame_width = 160, frame_height = 32, origin_x = 0, origin_y = 0, num_frames = 10, num_columns = 1 },
+    { x = 0, y = 288, frame_width = 160, frame_height = 32, origin_x = 0, origin_y = 0, num_frames = 10, num_columns = 1 },
+    { x = 0, y = 288, frame_width = 160, frame_height = 32, origin_x = 0, origin_y = 0, num_frames = 10, num_columns = 1 },
+  },
+}
+animation{
+  name = "open",
+  src_image = "menus/parchment/parchment_grey.png",
+  directions = {
+    { x = 0, y = 288, frame_width = 160, frame_height = 32, origin_x = 0, origin_y = 0 },
+    { x = 0, y = 288, frame_width = 160, frame_height = 32, origin_x = 0, origin_y = 0 },
+    { x = 0, y = 288, frame_width = 160, frame_height = 32, origin_x = 0, origin_y = 0 },
+    { x = 0, y = 288, frame_width = 160, frame_height = 32, origin_x = 0, origin_y = 0 },
+  },
+}
+animation{
+  name = "opening",
+  src_image = "menus/parchment/parchment_grey.png",
+  frame_delay = 50,
+  directions = {
+    { x = 0, y = 0, frame_width = 160, frame_height = 32, origin_x = 0, origin_y = 0, num_frames = 10, num_columns = 1 },
+    { x = 0, y = 0, frame_width = 160, frame_height = 32, origin_x = 0, origin_y = 0, num_frames = 10, num_columns = 1 },
+    { x = 0, y = 0, frame_width = 160, frame_height = 32, origin_x = 0, origin_y = 0, num_frames = 10, num_columns = 1 },
+    { x = 0, y = 0, frame_width = 160, frame_height = 32, origin_x = 0, origin_y = 0, num_frames = 10, num_columns = 1 },
+  },
+}
